--- a/Home/home.html
+++ b/Home/home.html
@@ -16,6 +16,7 @@
         </section>
         -->
         <div class="tabs-container">
+            <a class="tab0">granyourwish</a>
             <a class="tab" href="#tab-home">home</a>
             <a class="tab" href="#tab-japan">日本人留学生会</a>
             <a class="tab" href="#tab-hjpa">HJPA</a>
@@ -28,18 +29,20 @@
         <main class="main">
             <section class="slide" id="tab-home">
                 <h1>Grant Your Wish</h1>
-                <h3>~ みんなが自由に化学反応を起こす ~</h3>
+                <h3>~ みんなの自由が起こす　化学反応 ~</h3>
             </section>
-            <section class="slide" id="tab-japan">
+            <section class="slide-ja" id="tab-japan">
                 <h1>日本人留学生会</h1>
-                <h3>700人</h3>
+                <h3><br>
+                    <br>約700人　の　日本人　が　奇跡　を　起こす</h3>
+                <p><a href="./japan/japan.html"><br>こちらをクリック　→</a></p>
             </section>
-            <section class="slide" id="tab-hjpa">
+            <section class="slide-hj" id="tab-hjpa">
                 <h1>HJPA</h1>
                 <h3>園母奨学金</h3>
             </section>
-            <section class="slide" id="tab-school">
-                <h1>~ 学科紹介 ~</h1>
+            <section class="slide-sc" id="tab-school">
+                <h1><br>学科紹介</h1>
                 <h3><a href="./school_subject/school_subject.html"><br>こちらをクリック　→</a></h3>
                 <!--
                 <div class="subject">  
@@ -53,8 +56,9 @@
                 </div> 
                 -->
             </section>
-            <section class="slide" id="tab-tonari">
-                <h1>~ トンアリ ~</h1>
+            <section class="slide-to" id="tab-tonari">
+                <h1>80以上の国・地域から集まった若者たち<br>
+                    彼らが挑戦するのは... </h1>
                 <h3><a href="./tonari/tonari.html"><br>こちらをクリック　→</a></h3>
             </section>
         </main> 
