--- a/Home/tonari/tonari.html
+++ b/Home/tonari/tonari.html
@@ -9,13 +9,7 @@
     </head>
     <body>     
         <div class="tonari-container">
-            <!--
-            <a class="et-hero-tab" href="#tab-home">home</a>
-            <a class="et-hero-tab" href="#tab-japan">日本人留学生会</a>
-            <a class="et-hero-tab" href="#tab-hjpa">HJPA</a>
-            <a class="et-hero-tab" href="#tab-tonari">学科紹介</a>
-            <a class="et-hero-tab" href="#tab-tonari">トンアリ</a>
-            -->
+            <a class="tonari-tab0">granyourwish</a>
             <a class="tonari-tab" href="../home.html">home</a>
             <a class="tonari-tab" href="../japan/japan.html">日本人留学生会</a>
             <a class="tonari-tab" href="../hjpa/hjpa.html">HJPA</a>
@@ -96,16 +90,18 @@
                         </a>
                       </li>
                       <li class="leftbar-dropdown">
-                        <a href="javascript:void(0)">           <!-- href = "#"：画面先頭に移動-->
+                        <a href="#rest">           <!-- href = "#"：画面先頭に移動-->
                             <i class="child child-japan"></i>
                             <span>・活動休止中</span>
                         </a>
+                        <!--
                         <div class="leftbar-submenu">
                           <ul>
                             <li><a href="#rest">S!NAGY</a></li>
                             <li><a href="#rest">ヘボルム</a></li>
                           </ul>
                         </div> 
+                        -->
                       </li>
                     </ul>
                 </div>
@@ -115,7 +111,7 @@
         <main class="main">
             <section class="tonari-slide home" id="tab-home">
                 <h1>トンアリ紹介</h1>
-                <h3>~ さーよったよった！運動から文学までより取り見取り ~</h3>
+                <h3>~ 소개소개 ~</h3>
             </section>
             <section class="tonari-slide japan" id="japan1">
                 <h1>ルミエル</h1>
@@ -129,7 +125,7 @@
                     <p><br></p>
                 </div>
             </section>
-            <section class="tonari-slide japan" id="japan3">
+            <section class="tonari2-slide japan" id="japan3">
                 <h1>【Re-creation】</h1>
                 <div class="box">
                     <p><br>Re-creationは1997年に出来た、ダンスのトンアリです！<br>
@@ -159,7 +155,7 @@
                     <p><br></p>
                 </div>
             </section>
-            <section class="tonari-slide japan" id="japan6">
+            <section class="tonari2-slide japan" id="japan6">
                 <h1>孝ショック❗️</h1>
                 <div class="box">
                     <p><br>孝shockは日本人留学生会直属の公的トンアリになります。<br>
@@ -193,12 +189,23 @@
                         <br>一人一人に神様が願われてる内容を悟る一つのきっかけになったらと思い活動してます(ヨツバノクローバー)<br></p>
                 </div>
             </section>
-            <section class="tonari-slide japan">
-            </section>
-            <section class="tonari-slide example" id="example1">
+            <section class="tonari2-slide example" id="example1">
                 <h1>PBS</h1>
                 <div class="box">
-                    <p><br></p>
+                    <p><br><strong>【トンアリ活動内容】</strong><br>
+                        <br>私たちは、韓国と日本の平和のために活動をしています。<br>
+                        <br>今までは、日本と韓国の歴史について勉強したり、学祭で韓国人を対象に、<br>
+                        <br>韓日トンネルに対するアンケート調査を実施したりしました。<br>
+                        <br>また、日本人留学生として、感じた韓国の文化、情をYouTubeを通して伝える活動をしたいます。<br>
+                        <br>
+                        <br><strong>【頑張っていること】</strong><br>
+                        <br>今コロナの状況でなかなか活動はできていませんが、そんな中でYouTube活動に力を入れています。<br>
+                        <br>メディアを通して活動をしていきながら、日本と韓国が少しでも各国の文化を理解できるようなコンテンツを作れるように頑張っています。<br>
+                        <br>
+                        <br><strong>【どのようなトンアリにしたいと思っているか、ビジョン】</strong><br>
+                        <br>まだ小さいトンアリではありますが、ご父母様の願いの一つである韓日平和を目標に頑張っていきたいと思っています。<br>
+                        <br>日本と韓国は歴史的にも難しい内容はあると思いますが、お互いが理解し合えるような関係になれるように、<br>
+                        <br>精誠を捧げられるトンアリになれたらいいと思います。<br></p>
                 </div>
             </section>
             <section class="tonari-slide example" id="example2">
@@ -219,10 +226,37 @@
                     <p><br></p>
                 </div>
             </section>
-            <section class="tonari-slide example" id="example5">
+            <section class="tonari2-slide example" id="example5">
                 <h1>韓国籍留学生の会</h1>
                 <div class="box">
-                    <p><br></p>
+                    <p><br>はじめまして。KJSCです。<br>
+                        <br>韓・日サポートコミュニティーの英語で、通称：KJSCです。<br>
+                        <br>私たちKJSCは主に鮮文大学で日本から来た留学生でありながらも韓国籍で通っている留学生をサポートする会です。<br>
+                        <br>主に韓国人と日本人の両親を持つハーフ、在日僑胞（在日韓国人）の両親を持つメンバーがいます。<br>
+                        <br>今まで鮮文大学において韓国籍でありながらも留学生でいるということは韓国社会ではもちろん、<br>
+                        <br>鮮文大学においてもなかなか立場が理解されませんでした。<br>
+                        <br>書類上の手続きにおいても一般の外国人扱いではなく一般の韓国人と同じ扱いであることから大変なことがありました。<br>
+                        <br>そこから韓国籍の留学生の中でアイデンティティにおいて分からなくなってしまった、<br>
+                        <br>傷ついてしまっていたというメンバーもいました。<br>
+                        <br>
+                        <br>そこで今年からこのKJSCが立ち上がりました。<br>
+                        <br>そういったメンバーの目に見えるサポート（心のサポート）と目に見えないサポート（行政上のサポート）をしています。<br>
+                        <br>鮮文大学を卒業してから韓国籍でいて「大変だった」というものにするのではなく「良かった」といえれるコミュニティーを目指しています。<br>
+                        <br>
+                        <br><strong>●頑張っていること</strong><br>
+                        <br>「韓国籍の留学生」として韓国での留学生生活を有意義に送れるようにサポートしています。<br>
+                        <br>また、このコミュニティーでは韓国籍の留学生のメンバーが多数いますが、自分が初めて韓国籍を持ち韓国名で韓国人として学校に通っているというメンバーがたくさんいます。<br>
+                        <br>育った環境は日本であるため、ほぼアイデンティティが日本人のような感覚であり、<br>
+                        <br>初めて大学の韓国人の友だちと触れ合いながら自分は「韓国人なのか日本人なのか」と考え始めたというメンバーもいます。<br>
+                        <br>そういったメンバーの立場を理解し、共感し、サポートしてあげながら、自分が改めて「韓国人でもある」というアイデンティティに気づかせれるようなプログラムを企画したりしています。<br>
+                        <br>
+                        <br><strong>●どのようなトンアリにしたいと思っているか、ビジョンなど</strong><br>
+                        <br>１人１人が鮮文大学を卒業してから韓国籍で「良かった！」と思ってもらえるようにすることがKJSCの最終目標であります。<br>
+                        <br>なかなか理解されず大変だったけども改めて自分のアイデンティティに気づき、進路につながったという声を聞けたらうれしいものです。<br>
+                        <br>「韓国人でもある自分」という点に気づいてもらえれるように日々、精進しております。<br>
+                        <br>また、メンバーの中にも在日韓国人の留学生もいることから、「在日韓国人・朝鮮人」といった人たちとはどういう人たちなのか、<br>
+                        <br>「大韓民国民団、朝鮮総連」といった組織がなぜ日本にあるのか、在日韓国人・朝鮮人のたちが韓国や日本社会においてどういう立場にいるのかなど、<br>
+                        <br>直接、在日韓国人の外部講師をお迎えしてのセミナーなども行っています。<br></p>
                 </div>
             </section>
             <section class="tonari-slide example" id="example6">
@@ -237,21 +271,45 @@
                     <p><br></p>
                 </div>
             </section>
-            <section class="tonari-slide example" id="example8">
+            <section class="tonari2-slide example" id="example8">
                 <h1>撮影チーム(CARP)</h1>
                 <div class="box">
-                    <p><br></p>
+                    <p><br><strong>・YSP紹介映像の制作 (YSP YOUTUBE, YSP Instagram)<br>
+                        <br>・YSP活動紹介映像の制作 (YSP YOUTUBE)<br>
+                        <br>・CARPアルティメット大会 撮影, 映像制作<br>
+                        <br>・CARP伝道チーム ３DAY 広報映像<br>
+                        <br>
+                        <br>・学番写真撮影(16.17.18.19)<br>
+                        <br>・日本人留学生会：新入生歓迎会、4年生送別会<br>
+                        <br>・日本人留学生 97年生 体育大会<br>
+                        <br>・Lumiere 記念撮影
+                        <br>・CARP：１世 疎通チーム 経営学科の꿈다방 撮影、アルティメット大会 撮影<br>
+                        <br>                        
+                        <br>＜頑張っていること＞</strong><br>
+                        <br>真の御父母様が中心になって進めている摂理の中で鮮文大学は唯一、天一国国立大学に任命された大学です。<br>
+                        <br>天の摂理の中心に立っている鮮文大学のCARP、そして今学期から始動し始めたYSPの中で、<br>
+                        <br>特に力を入れているのがメディアです。<br>
+                        <br>今年の６月に御父母様もメディアの重要性について語られました。<br>
+                        <br>コロナによって언텍트時代になった今、メディアこそが人と人を繋げる大きな役割を担います。<br>
+                        <br>今はCARPそしてYSPのインスタグラムの運営に重点を持ちながら、より多くの人に鮮文大学でのCARP, YSP活動を知ってもらえるよう、<br>
+                        <br>日々改善と全身をしています。いまだに運営としては定着していない不足な部分もありますが、<br>
+                        <br>一人一人の実力の強化のためにメディアチーム内での教育の時間も十分にとっていく予定です。<br>
+                        <br>
+                        <br><strong>＜どんな동아리にしたいか、VISION＞</strong><br>
+                        <br>鮮文CARP, YSPメディアチームはこれからも鮮文CARP,YSPを楽しく広報しながらも、<br>
+                        <br>摂理の先を見据えメディアチームが鮮文の摂理を引っ張っていける立場に立っていけれたらと思っています。<br>
+                        <br>最終的には認知度と信頼を土台に孝情文化の拡散をしていきたいです。<br>
+                        <br>地域社会との関係性を深め、共に生きることのできる社会をつくるための手段として活動していけたらと思っています。</p>
                 </div>
             </section>
             <section class="tonari-slide rest" id="rest">
                 <h1>活動休止中</h1>
                 
                 <div class="box">
-                    <p><br><h3>S!NAGY<br>
-                            　ヘボルム<br></h3></p>
+                    <p><br><h3>・S!NAGY<br>
+                            　・ヘボルム<br></h3></p>
                 </div>
             </section>
-            
         </main> 
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
         <script src="tonari.js"></script>
