--- a/Home/japan/japan.html
+++ b/Home/japan/japan.html
@@ -2,9 +2,25 @@
 <html lang="ja">
     <head>
         <meta charset = "utf-8">
-        <title>Grant Your Wish</title>
+        <title>日本人留学生会</title>
+        <link rel = "stylesheet" href="japan.css">
     </head>
     <body>
+        <div class="japan-container">
+            <a class="japan-tab0">granyourwish</a>
+            <a class="japan-tab" href="../home.html">home</a>
+            <a class="japan-tab" href="#tab-home">日本人留学生会</a>
+            <a class="japan-tab" href="../hjpa/hjpa.html">HJPA</a>
+            <a class="japan-tab" href="../school_subject/school_subject.html">学科紹介</a>
+            <a class="japan-tab" href="../tonari/tonari.html">トンアリ</a>
+        </div>
 
+        <div class = "japan-slide" id="tab-home">
+            <a class="first"><h1>日本人</h1></a>
+            <a class="last"><h1>留学生会</h1></a>
+        </div>
+        <div class="japan-slide">
+
+        </div>
     </body>
 </html>
