--- a/Home/home/home.html
+++ b/Home/home/home.html
@@ -5,8 +5,7 @@
         <title>Grant Your Wish</title>
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-        <link rel = "stylesheet" href = "home.css"> 
-        <script type = "text/javascript" src="./school_subject/school_subject.js"></script>   
+        <link rel = "stylesheet" href = "home.css">   
     </head>
     <body>
         <!--
@@ -16,7 +15,7 @@
         </section>
         -->
         <div class="tabs-container">
-            <a class="tab0">granyourwish</a>
+            <a class="tab0"><img src="home_image/logo.png"></a>
             <a class="tab" href="#tab-home">home</a>
             <a class="tab" href="#tab-japan">日本人留学生会</a>
             <a class="tab" href="#tab-hjpa">HJPA</a>
@@ -35,15 +34,17 @@
                 <h1>日本人留学生会</h1>
                 <h3><br>
                     <br>約700人　の　日本人　が　奇跡　を　起こす</h3>
-                <p><a href="./japan/japan.html"><br>こちらをクリック　→</a></p>
+                <p><a href="../japan/japan.html"><br>こちらをクリック　→</a></p>
             </section>
             <section class="slide-hj" id="tab-hjpa">
                 <h1>HJPA</h1>
                 <h3>園母奨学金</h3>
+                <h3><a href="../hjpa/hjpa.html"><br>こちらをクリック　→</a></h3>
             </section>
             <section class="slide-sc" id="tab-school">
-                <h1><br>学科紹介</h1>
-                <h3><a href="./school_subject/school_subject.html"><br>こちらをクリック　→</a></h3>
+                <h1><br>35以上の学科数<br>
+                    <br>各学科で学んでいる内容とは，</h1>
+                <h3><a href="../school_subject/school_subject.html"><br>こちらをクリック　→</a></h3>
                 <!--
                 <div class="subject">  
                     <button class="btn btn--humanity btn--circle" for = "TAB-04" onclick = "school_subject()">人文社会大学 <br>（인문사회대학）</button>
@@ -59,7 +60,7 @@
             <section class="slide-to" id="tab-tonari">
                 <h1>80以上の国・地域から集まった若者たち<br>
                     彼らが挑戦するのは... </h1>
-                <h3><a href="./tonari/tonari.html"><br>こちらをクリック　→</a></h3>
+                <h3><a href="../tonari/tonari.html"><br>こちらをクリック　→</a></h3>
             </section>
         </main> 
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
