--- a/Home/school_subject/school_subject.html
+++ b/Home/school_subject/school_subject.html
@@ -10,7 +10,7 @@
     <body>     
         <div class="school-container">
             <a class="school-tab0">granyourwish</a>
-            <a class="school-tab" href="../home.html">home</a>
+            <a class="school-tab" href="../home/home.html">home</a>
             <a class="school-tab" href="../japan/japan.html">日本人留学生会</a>
             <a class="school-tab" href="../hjpa/hjpa.html">HJPA</a>
             <a class="school-tab" href="#tab-home">学科紹介</a>
