--- a/Home/tonari/tonari.html
+++ b/Home/tonari/tonari.html
@@ -5,12 +5,13 @@
         <title>トンアリ</title>
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-        <link rel = "stylesheet" href = "tonari.css"> 
+        <link rel ="stylesheet" href = "tonari.css"> 
+        <link rel="stylesheet" href="introduction.css">
     </head>
     <body>     
         <div class="tonari-container">
             <a class="tonari-tab0">granyourwish</a>
-            <a class="tonari-tab" href="../home.html">home</a>
+            <a class="tonari-tab" href="../home/home.html">home</a>
             <a class="tonari-tab" href="../japan/japan.html">日本人留学生会</a>
             <a class="tonari-tab" href="../hjpa/hjpa.html">HJPA</a>
             <a class="tonari-tab" href="../school_subject/school_subject.html">学科紹介</a>
@@ -20,6 +21,7 @@
         <div class="page-wrap wrapper tog">
             <nav id="sidebar" class="leftbar-wrap">
                 <!-- sidebar-search  -->
+                
                 <div class="leftbar-menu">
                     <ul>
                       <li class="header-menu" href = "tab-home">
@@ -119,13 +121,37 @@
                     <p><br></p>
                 </div>
             </section>
-            <section class="tonari-slide japan" id="japan2">
+            <section class="tonari-slide-alpha japan" id="japan2">                
+                <div class="j-alpha"><img class = "alpha1" src="image/alpha1.jpg"></div>
                 <h1>アルファ芸術協会</h1>
-                <div class="box">
-                    <p><br></p>
+                <div class="j-alpha"><img class = "alpha2" src="image/alpha2.jpg"></div>
+                <div class="j-alpha"><img class = "alpha3" src="image/alpha3.jpg"></div>
+                <div class="j-alpha"><img class = "alpha4" src="image/alpha4.jpg"></div>
+                <div class="box-alpha">
+                    <p><br><strong>活動内容<br>
+                        <br>・毎週日曜日の大学礼拝で演奏<br>
+                        <br>・学校行事で演奏(大学の祝祭、式典)<br>
+                        <br>・教会行事で演奏(大会、音楽礼拝)<br>
+                        <br>・留学生会などの行事で演奏(新入生歓迎会、卒業生を送る会、日本語礼拝)<br>
+                        <br>
+                        <br>頑張っていること</strong><br>
+                        <br>まず、演奏するメンバー達が音楽を通して自己啓発し楽しみながら演奏することを目標にしています。<br>
+                        <br>次に、演奏を聞いてくれる人達が音楽を通して復興したり、<br>
+                        <br>影響を与えられるような演奏を心がけています。<br>
+                        <br>特に力を入れているのは礼拝の演奏です。<br>
+                        <br>礼拝の環境を整えるためにも音楽はとても大切なので、<br>
+                        <br>私たち演奏チームが心を込めて演奏できるように頑張っています。<br>
+                        <br>
+                        <br><strong>今後のビジョン</strong><br>
+                        <br>私たちのトンアリは、毎学期演奏できるメンバーが異なり人数も変化する中で、<br>
+                        <br>どのような活動ができるのかその学期ごとに話し合いながら<br>
+                        <br>自分たちのできることを見つけて活動しています。<br>
+                        <br>それを踏まえて今後は、このトンアリを継続して伝統として残していくことが目標です。<br>
+                        <br>現在は少ない人数ではありますが、<br>
+                        <br>先輩達が作ってくださった基盤を守っていきながら後輩達にも継承していきたいと考えています。</p>
                 </div>
             </section>
-            <section class="tonari2-slide japan" id="japan3">
+            <section class="tonari-slide japan" id="japan3">
                 <h1>【Re-creation】</h1>
                 <div class="box">
                     <p><br>Re-creationは1997年に出来た、ダンスのトンアリです！<br>
@@ -155,7 +181,7 @@
                     <p><br></p>
                 </div>
             </section>
-            <section class="tonari2-slide japan" id="japan6">
+            <section class="tonari-slide japan" id="japan6">
                 <h1>孝ショック❗️</h1>
                 <div class="box">
                     <p><br>孝shockは日本人留学生会直属の公的トンアリになります。<br>
@@ -189,7 +215,7 @@
                         <br>一人一人に神様が願われてる内容を悟る一つのきっかけになったらと思い活動してます(ヨツバノクローバー)<br></p>
                 </div>
             </section>
-            <section class="tonari2-slide example" id="example1">
+            <section class="tonari-slide example" id="example1">
                 <h1>PBS</h1>
                 <div class="box">
                     <p><br><strong>【トンアリ活動内容】</strong><br>
@@ -226,7 +252,7 @@
                     <p><br></p>
                 </div>
             </section>
-            <section class="tonari2-slide example" id="example5">
+            <section class="tonari-slide example" id="example5">
                 <h1>韓国籍留学生の会</h1>
                 <div class="box">
                     <p><br>はじめまして。KJSCです。<br>
@@ -271,7 +297,7 @@
                     <p><br></p>
                 </div>
             </section>
-            <section class="tonari2-slide example" id="example8">
+            <section class="tonari-slide example" id="example8">
                 <h1>撮影チーム(CARP)</h1>
                 <div class="box">
                     <p><br><strong>・YSP紹介映像の制作 (YSP YOUTUBE, YSP Instagram)<br>
