--- a/Home/hjpa/hjpa.html
+++ b/Home/hjpa/hjpa.html
@@ -2,9 +2,25 @@
 <html lang="ja">
     <head>
         <meta charset = "utf-8">
-        <title>Grant Your Wish</title>
+        <title>HJPA</title>
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+        <link rel = "stylesheet" href="hjpa.css">
     </head>
     <body>
+        <div class="japan-container">
+            <a class="japan-tab0">granyourwish</a>
+            <a class="japan-tab" href="../home/home.html">home</a>
+            <a class="japan-tab" href="../japan/japan.html">日本人留学生会</a>
+            <a class="japan-tab" href="#tab-home">HJPA</a>
+            <a class="japan-tab" href="../school_subject/school_subject.html">学科紹介</a>
+            <a class="japan-tab" href="../tonari/tonari.html">トンアリ</a>
+        </div>
 
+        <div class = "japan-slide" id="tab-home">
+            <a class="first"><h2>H J P A</h2></a>
+        </div>
+        <div class="japan-slide">
+
+        </div>
     </body>
 </html>
