--- a/Home/japan/japan.html
+++ b/Home/japan/japan.html
@@ -8,7 +8,7 @@
     <body>
         <div class="japan-container">
             <a class="japan-tab0">granyourwish</a>
-            <a class="japan-tab" href="../home.html">home</a>
+            <a class="japan-tab" href="../home/home.html">home</a>
             <a class="japan-tab" href="#tab-home">日本人留学生会</a>
             <a class="japan-tab" href="../hjpa/hjpa.html">HJPA</a>
             <a class="japan-tab" href="../school_subject/school_subject.html">学科紹介</a>
